2017-02-16  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* INSTALL: Add bison, flex, libpcap, libssh, libksba to the list
	of prerequisites since it is actually required by nasl. Add recommendation
	to have WMI and improved SNMP support. Add command to install prerequisites.

	* nasl/CMakeLists.txt: Add find_library for libpcap.

2017-02-16  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/CMakeLists.txt: Check for libraries with pkg_check_modules and
	find_library. It was still in the CMakeLists.txt of openvas-libraries.

2017-02-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl.c, nasl/nasl-lint.c: Fix missing-field-initializers clang
	warning.

	* nasl/nasl_crypto.c (tls_prf): Check for null pointer.

2017-02-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (nasl_ntlm2_response, nasl_ntlm_response): Fix
	possible segfaults.
	(nasl_nt_owf_gen, nasl_lm_owf_gen): Fix error messages.

2017-02-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginlaunch.c (non_simult_ports_list): Change from arglist to
	GSList.
	(common, required_ports_in_list, wait_if_simult_ports): New functions.
	(next_free_process): Call wait_if_simult_ports(). Improve code style.
	(pluginlaunch_init): Convert non_simult_ports to linked-list.

	* src/plugs_req.c (requirements_common_ports): Remove unused function.

	* src/plugs_req.h, src/utils.h: Remove unused includes and declarations.

	* src/utils.c (common, list2arglist): Remove unused functions.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: Drop libopenvas_base and libopenvas_nasl as
	prerequisite.

	* CMakeLists.txt: Remove handling of LIBOPENVAS_BASE.
	Add LIBGVM_UTIL.

	* src/CMakeLists.txt: Remove handling of LIBOPENVAS_BASE.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_builtin_find_service.c, src/attack.c, src/comm.c,
	src/nasl_plugins.c, src/openvassd.c, src/pluginlaunch.c,